--- a/apps.json
+++ b/apps.json
@@ -30,6 +30,15 @@
         "icon": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrqxX-J2dNtbBe1wSwRXBjBbEdu7-MUoXYdg&s",
         "rating": "★★★☆☆",
         "category": "productivity"
-    }
-    
+    },
+    {
+      "category": "web",
+        "href" : "https://docs.google.com/document/d/1fGG-miZgBFk-C0zfO8BPWsivqsRHK_3DChXCKDo8ShM/edit?usp=drivesdk",
+        "title" : "Lightning translate"   
+    },
+    {
+         "category": "web",
+        "href" : "https://nanami-says.tumblr.com/post/637859023755083776/part-i-chapters-1-9",
+        "title" : "Nanami translate" 
+    }    
 ]
