Add new entry for GATE prep resource

--- a/apps.json
+++ b/apps.json
@@ -42,5 +42,11 @@
         "href" : "https://nanami-says.tumblr.com/post/637859023755083776/part-i-chapters-1-9",
         "title" : "Nanami translate",
         "category": "web"
-    }    
+    } ,
+    {
+        
+        "href" : "https://github.com/Priyanshuu-2109/GATE-CSE-notes/tree/main",
+        "title" : "gate prep",
+        "category": "web"
+    }   
 ]
