Add new entry for GATE preparation resources

--- a/apps.json
+++ b/apps.json
@@ -45,5 +45,11 @@
          "category": "web",
         "href" : "https://nanami-says.tumblr.com/post/637859023755083776/part-i-chapters-1-9",
         "title" : "Nanami translate" 
-    }    
+    } ,
+    {
+        
+        "href" : "https://github.com/Priyanshuu-2109/GATE-CSE-notes/tree/main",
+        "title" : "gate prep",
+        "category": "web"
+    }   
 ]
