Add new entry for Rsvp.html in apps.json

--- a/apps.json
+++ b/apps.json
@@ -51,5 +51,11 @@
         "href" : "https://github.com/Priyanshuu-2109/GATE-CSE-notes/tree/main",
         "title" : "gate prep",
         "category": "web"
+    } ,
+    {
+        
+        "href" : "Rsvp.html",
+        "title" : "gate prep",
+        "category": "web"
     }   
 ]
