--- a/apps.json
+++ b/apps.json
@@ -37,6 +37,14 @@
         "category": "productivity"
     },
     {
+        
+        "href" : "Rsvp.html",
+        "title" : "Professional RSVP Speed Reader",
+    "icon": "",
+        "rating": "★★★☆☆",
+        "category": "productivity"
+    }  ,
+    {
       "category": "web",
         "href" : "https://docs.google.com/document/d/1fGG-miZgBFk-C0zfO8BPWsivqsRHK_3DChXCKDo8ShM/edit?usp=drivesdk",
         "title" : "Lightning translate"   
@@ -51,11 +59,5 @@
         "href" : "https://github.com/Priyanshuu-2109/GATE-CSE-notes/tree/main",
         "title" : "gate prep",
         "category": "web"
-    } ,
-    {
-        
-        "href" : "Rsvp.html",
-        "title" : "gate prep",
-        "category": "web"
-    }   
+    } 
 ]
